Upgrade Java version and update related dependencies; refactor test cases for consistency